# alfs_py

./: .gitignore  Dockerfile  Dockerfile_Orthografic  LICENSE.txt  Pipfile  README.md  main.py  pyproject.toml  requirements.txt
resources/shaders/: col.vert.glsl  def.frag.glsl  def.vert.glsl  def_pass.vert.glsl  flat.vert.glsl  proj.frag.glsl  proj.vert.glsl  tex.frag.glsl  tex.vert.glsl
src/: main.py  test.py
src/alfspy/: cli.py  orthografic_projection.py  run.py  test.py
src/alfspy/core/convert/: __init__.py  convert.py  data.py
src/alfspy/core/geo/: __init__.py  aabb.py  frustum.py  quad.py  side.py  tetrahedron.py  transform.py  triangle.py
src/alfspy/render/: __init__.py  data.py  render.py  render_sp.py
src/core/: camera.py  data.py  decorators.py  defs.py  errors.py  iters.py  renderer.py  shot.py  shot_loader.py  transform.py  utils.py
src/core/conv/: coord_conversion.py  data.py
src/core/convert/: coord_conversion.py  data.py
src/core/geo/: aabb.py  frustum.py  quad.py  tetrahedron.py  transform.py  triangle.py
src/core/rendering/: camera.py  data.py  renderer.py  sharepoint_shot.py  shot.py  shot_loader.py
src/core/sharepoint/: sharepoint_client.py  sharepoint_shot.py
src/core/util/: basic.py  cyclic_list.py  decorators.py  defs.py  gltf.py  image.py  iters.py  moderngl.py  pyrr.py  pyrrs.py  video.py
src/examples/rendering/: data.py  render.py  render_sp.py  run.py
src/render/: render.py  render_sp.py  run.py
src/shaders/: def_pass.frag.glsl  flat.frag.glsl  tex.frag.glsl  tex.vert.glsl
test/core/convert/: convert.py
(+28 files in other folders)
