[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alfspy"]

[project]
name = "AlfsPy"
version = "0.0.0"
description = "Renderer for airborne light-field sampling data implemented via ModernGL"
readme = "README.md"
requires-python = "~=3.9"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Multimedia :: Graphics :: Capture :: Digital Camera",
]
dependencies = [
    "gltflib==1.0.13",
    "moderngl>=5.8.2",
    "numpy>=1.23.5",
    "opencv-python>=4.7.0.72",
    "Office365-REST-Python-Client>=2.4.1",
    "Pillow>=9.5.0",
    "pyrr==0.10.3",
    "trimesh[easy]==3.21.7",
]

